# discord-bots

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  bot_configuration.md  compare-docker-layers.sh  development.md  discord_setup.md  docker-compose.portainer.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-image-analysis.md  format-and-lint.ps1  notes.md  pyproject.toml  troubleshooting.md
.github/workflows/: ci.yml  docker-build-push.yml  lint-and-test.yml  on-prem-run-sth  on-prem-run-sth.yml
grossmann/: .env.sample  README.md  decimdictionary.py  main.py  nethack_module.py  pyproject.toml  test_integration.py  test_main.py
grossmann/tests/: conftest.py  test_integration.py  test_main.py  test_nethack.py
krampol/: Dockerfile  README.md  automaton.py  main.py  pyproject.toml  test_main.py
krampol/systemd files/: grossmann.service  simek.service
scripts/: delete_slash_commands.py  emoji_replies.py  list_active_users.py  list_roles.py  markov_stats.py  morpho_dad.ipynb  run_morpho.py  run_tagger.py  tagger_dad.py
src/common/: constants.py  discord_logging.py  http.py  persistence.py  types.py  utils.py
src/grossmann/: emotes.py  fame_persistence.py  grossmanndict.py  main.py  nethack_module.py  pause_persistence.py  utils.py
src/krampol/: automaton.py  main.py
src/simek/: main.py  run_morpho.py  utils.py
src/šimek/: main.py  morphodita_utils.py  run_tagger.py  tagger_dad.py  utils.py  šimekdict.py
tests/: conftest.py
tests/common/: test_constants.py  test_utils.py
tests/grossmann/: conftest.py  test_fame.py  test_integration.py  test_main.py  test_nethack.py  test_pause.py
tests/krampol/: test_main.py
tests/simek/: test_main.py  test_utils.py
tests/šimek/: conftest.py  test_main.py  test_morphodita_utils.py  test_utils.py
šimek/: .env.sample  README.md  decimdictionary.py  main.py  pyproject.toml  schizodict.py  simekdict.py  tagger_dad.py  test_main.py  test_utils.py  utils.py
