[project]
name = "discord-bots"
version = "0.1.0"
description = "Šimek&Grossmann bots."
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "aiohttp>=3.11.11,<4.0.0",
    "discord-handler>=0.0.5",
    "disnake>=2.10.1,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "ufal-morphodita==1.11.3.3",
]

[dependency-groups]
dev = [
    "poethepoet>=0.38.0",
    "pytest>=9.0.1,<9.1.0",
    "pytest-asyncio>=1.3.0,<1.4.0",
    "pytest-mypy>=0.10.3,<1.1.0",
    "pytest-ruff>=0.3.1,<0.6.0",
    "pytest-cov>=7.0.0,<7.1.0",
    "notebook>=7.5.0",
    "aioresponses>=0.7.8",
]
nethack = [
    "pexpect>=4.9.0",
    "pyte>=0.8.2",
    "pillow>=11.3.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F403", "F405", "E722", "F841", "E402"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "disnake.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
    "src.krampol.*", # krampol is not actively used
]
ignore_errors = true

[tool.poe.tasks]
# Separate import sorting until #8232 is merged
_ruff_lint = "ruff check --fix ."
_ruff_format = "ruff format ."
format-code = ["_ruff_lint", "_ruff_format"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
# there is no simple way to share part of them and change other part
addopts = ["--import-mode=importlib", "--ignore=./scripts", "-v", "--tb=short"]
#addopts = ["--import-mode=importlib", "--ignore=./scripts", "-v", "--tb=short", "--ruff", "--ruff-format"]
#addopts = ["--import-mode=importlib", "--ignore=./scripts", "-v", "--tb=short", "--ruff", "--ruff-format", "--mypy"]
#addopts = ["--import-mode=importlib", "--ignore=./scripts", "-v", "--tb=short", "--ruff", "--ruff-format", "--mypy", "--cov=src", "--cov-report=html"]
#addopts = ["--import-mode=importlib", "--ignore=./scripts", "-v", "--tb=short", "--ruff", "--ruff-format", "--cov=src", "--cov-report=html"]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
namespace = true
