[project]
name = "grossmann-bot"
version = "0.1.0"
description = "Grossmann bot."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.11.11,<4.0.0",
    "requests>=2.32.5,<3.0.0",
    "disnake>=2.10.1,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]
[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
]
