[project]
name = "grossmann-bot"
version = "0.1.0"
description = "Grossmann bot."
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "aiohttp>=3.11.11,<4.0.0",
    "requests>=2.32.5,<3.0.0",
    "disnake>=2.10.1,<3.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pexpect>=4.9.0",
    "pyte>=0.8.2",
    "pillow>=11.3.0",
]
[dependency-groups]
dev = [
    "dpytest>=0.7.0",
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=1.2.0,<1.3.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "ruff>=0.13.2,<1.0.0",
    "pytest-mypy>=0.10.3,<1.1.0",
    "pytest-ruff>=0.3.1,<0.6.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["F403", "F405", "E722", "F841"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
#addopts = ["-v", "--tb=short"]
